# tppatchcord

./: .gitignore  README.md  api_types.py  example.py  pyproject.toml  tppatchcord.py
tppatchcord/: api_types.py  websockets.py
