[tool.poetry]
name = "tppatchcord"
version = "0.1.0"
description = "A C-style procedural Python Discord library"
authors = ["idmp152 <ilyabelykh123@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^13.0.1"
recordclass = "^0.22.1"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
